--- a/src/app/logout/logout.component.html
+++ b/src/app/logout/logout.component.html
@@ -1,4 +1,4 @@
-<div class="flex h-full w-full p-4 items-center justify-center bg-base-100">
+<div class="flex h-screen w-full p-4 items-center justify-center bg-base-100">
   <p>Logged out. You will be redirected to login page.</p>
   <a class="ml-1 link" href="/login">click here</a>
 </div>
