--- a/src/app/shared/components/curriculum-card.component.html
+++ b/src/app/shared/components/curriculum-card.component.html
@@ -1,7 +1,7 @@
 <div class="flex">
   <ng-container *ngIf="mode === 'blueprint'">
     <div
-      class="flex rounded-2xl border-8 border-dashed border-base-300 w-[400px] h-[400px]">
+      class="flex rounded-2xl border-8 border-dashed border-base-content w-[400px] h-[400px]">
       <div class="flex m-auto">
         <button class="btn bg-neutral rounded-xl" (click)="onClick()">
           CREATE
