--- a/src/app/feedback-comment/feedback-comment.component.html
+++ b/src/app/feedback-comment/feedback-comment.component.html
@@ -1,8 +1,12 @@
-<div
-  class="flex shadow-lg rounded-lg min-h-[100px] max-h-[400px] min-w-[200px] max-w-[600px] p-10 flex-col">
-  <div class="flex flex-row gap-2 items-center">
-    <p class="text-lg font-bold">{{ fullname }}</p>
-    <p class="text-xs font-normal">{{ date }}</p>
+<div class="flex shadow-lg rounded-lg min-h-[100px] max-h-[400px] min-w-[200px] max-w-[600px] p-10 flex-col bg-base-100">
+  <div class="flex flex-row items-center">
+    <div class="flex flex-row items-center gap-2">
+      <p class="text-lg font-bold">{{ fullname }}</p>
+      <p class="text-xs font-normal">{{ date }}</p>
+    </div>
+    <div class="flex flex-row items-center ml-4">
+      <p class="text-xs badge font-bold" [ngClass]="getBadgeColor(roleType)">{{ role }}</p>
+    </div>
   </div>
   <div class="flex mt-2">
     <p class="text-sm break-words line-clamp-5">
