--- a/src/app/feedback-page/feedback-page.component.html
+++ b/src/app/feedback-page/feedback-page.component.html
@@ -1,7 +1,15 @@
-<div class="flex flex-col p-14 gap-4">
-  <div class="flex flex-2 gap-4 bg-base-200 p-8 rounded-lg flex-col">
+<div class="flex flex-col p-14 gap-4 h-full bg-base-300">
+  <div class="flex flex-col justify-center">
+    <h1 class="text-4xl font-bold text-center">
+      {{ (curriculum$ | async)?.department?.name }}
+    </h1>
+    <h1 class="text-2xl font-bold text-center">
+      {{ (curriculum$ | async)?.title }}
+    </h1>
+  </div>
+  <div class="flex flex-2 gap-4 bg-base-100 shadow-lg p-8 rounded-lg flex-col">
     <ng-container *ngFor="let yearTerm of yearTerm$ | async">
-      <div class="overflow-x-auto">
+      <div class="overflow-x-hidden">
         <table class="table table-compact w-full">
           <thead>
             <tr>
@@ -17,24 +25,23 @@
           </thead>
           <tbody>
             <ng-container *ngFor="let subject of subjects$ | async">
-              <ng-container
-                *ngIf="
+              <ng-container *ngIf="
                   subject.year_level === yearTerm.year &&
                   subject.term === yearTerm.term
                 ">
                 <tr>
-                  <th class="border-2">{{ subject.year_level }}</th>
-                  <td class="border-2">{{ subject.term }}</td>
-                  <td class="border-2">{{ subject.code }}</td>
-                  <td class="min-w-[220px] border-2">
+                  <td class="border-2 border-base-300">{{ subject.year_level }}</td>
+                  <td class="border-2 border-base-300">{{ subject.term }}</td>
+                  <td class="border-2 border-base-300">{{ subject.code }}</td>
+                  <td class="min-w-[250px] border-2 border-base-300">
                     {{ subject.title }}
                   </td>
-                  <td class="border-2">{{ subject.units }}</td>
-                  <td class="border-2">{{ subject.hours }}</td>
-                  <td class="border-2">
+                  <td class="border-2 border-base-300">{{ subject.units }}</td>
+                  <td class="border-2 border-base-300">{{ subject.hours }}</td>
+                  <td class="border-2 border-base-300">
                     {{ subject.prerequisite?.code ?? 'NONE' }}
                   </td>
-                  <td class="border-2">
+                  <td class="border-2 border-base-300">
                     {{ subject.corequisite?.code ?? 'NONE' }}
                   </td>
                 </tr>
@@ -44,9 +51,9 @@
               <th></th>
               <td></td>
               <td></td>
-              <td class="min-w-[220px] text-end font-bold">TOTAL UNITS</td>
-              <td class="border-2">{{ yearTerm.unit }}</td>
-              <td></td>
+              <td class="font-bold min-w-[250px] text-end border-base-300">TOTAL</td>
+              <td class="border-2 border-base-300 font-bold">{{ yearTerm.unit }}</td>
+              <td class="border-2 border-base-300 font-bold">{{ yearTerm.hour }}</td>
               <td></td>
               <td></td>
             </tr>
@@ -56,9 +63,15 @@
     </ng-container>
   </div>
 
-  <div class="flex mx-auto">
-    <button class="btn btn-warning btn-wide" (click)="openGiveFeedbackModal()">
+  <div class="flex mx-auto gap-4 my-8">
+    <button class="btn btn-warning btn-wide text-warning-content shadow-lg" (click)="openGiveFeedbackModal()">
       Give Feedback
+    </button>
+    <button (click)="openApproveModal()" class="btn btn-success btn-wide text-success-content shadow-lg" *ngIf="role === 'stakeholder'">
+      Approve
+    </button>
+    <button (click)="openRejectModal()" class="btn btn-error btn-wide text-error-content shadow-lg" *ngIf="role === 'stakeholder'">
+      Reject
     </button>
   </div>
   <div class="flex flex-row flex-wrap gap-8 justify-center">
@@ -72,25 +85,52 @@
 
 <div class="modal" [ngClass]="{ 'modal-open': giveFeedbackModalState }">
   <div class="modal-box relative min-w-[700px]">
-    <label
-      for="my-modal-3"
-      class="btn btn-sm btn-circle absolute right-2 top-2"
-      (click)="closeGiveFeedbackModal()"
-      >✕</label
-    >
+    <label for="my-modal-3" class="btn btn-sm btn-circle absolute right-2 top-2"
+      (click)="closeGiveFeedbackModal()">✕</label>
     <h3 class="text-lg font-bold">Give your feedback below</h3>
     <form [formGroup]="form">
       <div class="flex flex-col gap-2">
         <div class="form-control">
-          <textarea
-            formControlName="content"
-            class="textarea textarea-bordered"
-            placeholder="Feedback..."></textarea>
+          <textarea formControlName="content" class="textarea textarea-bordered" placeholder="Feedback..."></textarea>
         </div>
         <button class="btn btn-neutral" (click)="onSubmitGiveFeedbackModal()">
           Submit
         </button>
       </div>
     </form>
+  </div>
+</div>
+
+<!-- APPROVE MODAL -->
+<input type="checkbox" id="delete-modal" class="modal-toggle" />
+<div
+  class="modal cursor-pointer"
+  [ngClass]="{ 'modal-open': approveModalState }">
+  <div class="modal-box" for="">
+    <h3 class="font-bold text-lg">Approve Curriculum</h3>
+    <p class="py-4">Are you sure you want to approve this curriculum?</p>
+    <div class="modal-action">
+      <label class="btn" (click)="onSubmitApproveModal()">APPROVE</label>
+      <label class="btn btn-outline" (click)="closeApproveModal()"
+        >CANCEL</label
+      >
+    </div>
+  </div>
+</div>
+
+<!-- REJECT MODAL -->
+<input type="checkbox" id="delete-modal" class="modal-toggle" />
+<div
+  class="modal cursor-pointer"
+  [ngClass]="{ 'modal-open': rejectModalState }">
+  <div class="modal-box" for="">
+    <h3 class="font-bold text-lg">Reject Curriculum</h3>
+    <p class="py-4">Are you sure you want to reject this curriculum?</p>
+    <div class="modal-action">
+      <label class="btn" (click)="onSubmitRejectModal()">REJECT</label>
+      <label class="btn btn-outline" (click)="closeRejectModal()"
+        >CANCEL</label
+      >
+    </div>
   </div>
 </div>
