--- a/src/app/feedback/feedback.component.html
+++ b/src/app/feedback/feedback.component.html
@@ -1,28 +1,25 @@
-<div class="flex flex-col p-14">
+<div class="flex flex-col p-14 bg-base-300 h-full">
   <div class="flex gap-8 flex-wrap flex-row">
     <app-curriculum-card *ngFor="let curriculum of curriculums$ | async">
       <div class="flex flex-col w-full p-8 gap-2">
         <div class="flex flex-row">
           <div class="flex">
-            <h1 class="text-2xl font-bold">
+            <h1 class="text-2xl font-bold break-all line-clamp-3">
               {{ curriculum.title }}
             </h1>
           </div>
+          <div class="ml-auto flex min-w-[120px]">
+            <p class="badge badge-xs p-2 mt-1 badge-success rounded-lg font-semibold text-xs text-success-content">
+              Comments: {{ curriculum.comments?.length }}
+            </p>
+          </div>
         </div>
         <div class="flex" *ngIf="curriculum.description">
-          <p class="text-base">Description: {{ curriculum.description }}</p>
-        </div>
-        <div class="flex">
-          <p
-            class="badge badge-lg badge-success rounded-lg font-semibold text-xs">
-            Comments: {{ curriculum.comments?.length }}
-          </p>
+          <p class="text-base line-clamp-5">Description: {{ curriculum.description }}</p>
         </div>
         <div class="flex justify-center mt-auto">
-          <button
-            class="btn btn-warning rounded-2xl"
-            (click)="giveFeedback(curriculum)">
-            Give Feedback
+          <button class="btn btn-warning rounded-2xl" (click)="giveFeedback(curriculum)">
+            {{ buttonText }}
           </button>
         </div>
       </div>
