--- a/src/app/settings/settings.component.html
+++ b/src/app/settings/settings.component.html
@@ -1,1 +1,22 @@
-<p>settings works!</p>
+<div class="flex flex-wrap flex-row gap-4 bg-base-300 p-5 max-w-[700px]">
+  <ng-container *ngFor="let theme of themes">
+    <div class="bg-base-100 shadow-lg rounded-lg flex flex-col gap-1 p-2" [attr.data-theme]="theme"
+      [ngClass]="{'border-4 border-base-content': theme === selectedTheme}" (click)="setTheme(theme)">
+      <div class="font-bold">{{ theme }}</div>
+      <div class="flex flex-wrap gap-1">
+        <div class="bg-primary flex aspect-square w-5 items-center justify-center rounded lg:w-6">
+          <div class="text-primary-content text-sm font-bold">A</div>
+        </div>
+        <div class="bg-secondary flex aspect-square w-5 items-center justify-center rounded lg:w-6">
+          <div class="text-secondary-content text-sm font-bold">A</div>
+        </div>
+        <div class="bg-accent flex aspect-square w-5 items-center justify-center rounded lg:w-6">
+          <div class="text-accent-content text-sm font-bold">A</div>
+        </div>
+        <div class="bg-neutral flex aspect-square w-5 items-center justify-center rounded lg:w-6">
+          <div class="text-neutral-content text-sm font-bold">A</div>
+        </div>
+      </div>
+    </div>
+  </ng-container>
+</div>
