--- a/src/app/shared/layouts/sidebar.component.html
+++ b/src/app/shared/layouts/sidebar.component.html
@@ -1,48 +1,34 @@
 <div class="drawer drawer-mobile">
   <input id="my-drawer-2" type="checkbox" class="drawer-toggle" />
-  <div
-    class="drawer-content flex flex-col justify-start bg-base-100 h-full w-full">
+  <div class="drawer-content flex flex-col justify-start bg-base-300 h-full w-full">
     <div class="flex w-full sticky top-0 z-50">
       <div class="navbar bg-base-100 border-b shadow-sm border-base-300">
         <div class="flex-none">
-          <label
-            for="my-drawer-2"
-            class="btn btn-square btn-ghost drawer-button lg:hidden">
-            <svg
-              xmlns="http://www.w3.org/2000/svg"
-              fill="none"
-              viewBox="0 0 24 24"
+          <label for="my-drawer-2" class="btn btn-square btn-ghost drawer-button lg:hidden">
+            <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24"
               class="inline-block w-5 h-5 stroke-current">
-              <path
-                stroke-linecap="round"
-                stroke-linejoin="round"
-                stroke-width="2"
-                d="M4 6h16M4 12h16M4 18h16"></path>
+              <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16M4 18h16"></path>
             </svg>
           </label>
         </div>
         <div class="text-lg font-bold">{{ title }}</div>
-        <div class="ml-auto dropdown dropdown-end">
-          <label tabindex="0" class="btn btn-square btn-ghost">
-            <div class="w-10 rounded-full">
-              <svg
-                xmlns="http://www.w3.org/2000/svg"
-                fill="none"
-                viewBox="0 0 24 24"
-                class="inline-block w-5 h-5 stroke-current">
-                <path
-                  stroke-linecap="round"
-                  stroke-linejoin="round"
-                  stroke-width="2"
-                  d="M5 12h.01M12 12h.01M19 12h.01M6 12a1 1 0 11-2 0 1 1 0 012 0zm7 0a1 1 0 11-2 0 1 1 0 012 0zm7 0a1 1 0 11-2 0 1 1 0 012 0z"></path>
-              </svg>
-            </div>
-          </label>
-          <ul
-            tabindex="0"
-            class="mt-3 p-2 shadow menu menu-compact dropdown-content bg-base-100 rounded-box w-52">
-            <li><a [routerLink]="'/logout'">Logout</a></li>
-          </ul>
+        <div class="ml-auto flex flex-row gap-2">
+          <div class="text-lg font-bold">{{ fullName }}</div>
+          <div class="dropdown dropdown-end">
+            <label tabindex="0" class="btn btn-square btn-ghost">
+              <div class="w-10 rounded-full">
+                <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24"
+                  class="inline-block w-5 h-5 stroke-current">
+                  <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                    d="M5 12h.01M12 12h.01M19 12h.01M6 12a1 1 0 11-2 0 1 1 0 012 0zm7 0a1 1 0 11-2 0 1 1 0 012 0zm7 0a1 1 0 11-2 0 1 1 0 012 0z">
+                  </path>
+                </svg>
+              </div>
+            </label>
+            <ul tabindex="0" class="mt-3 p-2 shadow menu menu-compact dropdown-content bg-base-100 rounded-box w-52">
+              <li><a [routerLink]="'/logout'">Logout</a></li>
+            </ul>
+          </div>
         </div>
       </div>
     </div>
@@ -51,58 +37,15 @@
   <div class="drawer-side">
     <label for="my-drawer-2" class="drawer-overlay"></label>
     <ul class="menu p-4 w-80 bg-base-200 text-base-content">
-      <li class="text-2xl font-bold">CICT Curriculum Management System</li>
       <div class="flex flex-col gap-4 mt-5">
-        <li>
-          <a
-            [routerLink]="'dashboard'"
-            [routerLinkActive]="'bg-primary text-primary-content'"
-            >Dashboard</a
-          >
-        </li>
-        <li>
-          <a
-            [routerLink]="'user-management'"
-            [routerLinkActive]="'bg-primary text-primary-content'"
-            >User Management</a
-          >
-        </li>
-        <li>
-          <a
-            [routerLink]="'curriculum-management'"
-            [routerLinkActive]="'bg-primary text-primary-content'"
-            >Curriculum Management</a
-          >
-        </li>
-        <li>
-          <a
-            [routerLink]="'subject-management'"
-            [routerLinkActive]="'bg-primary text-primary-content'"
-            >Subject Management</a
-          >
-        </li>
-        <li>
-          <a
-            [routerLink]="'department-management'"
-            [routerLinkActive]="'bg-primary text-primary-content'"
-            >Department Management</a
-          >
+        <li class="text-2xl font-bold">CICT Curriculum Management System</li>
+        <li *ngFor="let nav of TopSideNavItems">
+          <a [routerLink]="nav.link" [routerLinkActive]="'bg-primary text-primary-content'">{{ nav.label }}</a>
         </li>
       </div>
-      <div class="flex flex-col mt-auto">
-        <li>
-          <a
-            [routerLink]="'feedbacks'"
-            [routerLinkActive]="'bg-primary text-primary-content'"
-            >Feedbacks</a
-          >
-        </li>
-        <li>
-          <a
-            [routerLink]="'/feedbacks'"
-            [routerLinkActive]="'bg-primary text-primary-content'"
-            >Settings</a
-          >
+      <div class="flex flex-col mt-auto gap-4">
+        <li *ngFor="let nav of BottomSideNavItems">
+          <a [routerLink]="nav.link" [routerLinkActive]="'bg-primary text-primary-content'">{{ nav.label }}</a>
         </li>
       </div>
     </ul>
