--- a/src/app/subject-management/subject-management.component.html
+++ b/src/app/subject-management/subject-management.component.html
@@ -1,13 +1,14 @@
-<div class="flex flex-col">
+<div class="flex flex-col m-5">
   <div class="ml-auto flex">
     <label class="btn btn-wide m-4" (click)="openCreateSubjectModal()"
       >CREATE A SUBJECT</label
     >
   </div>
-  <div class="flex overflow-x-auto w-full h-full p-5">
-    <table class="table table-compact w-full text-lg">
+  <div class="flex overflow-x-auto w-full h-full p-5 shadow-lg bg-base-100 rounded-lg">
+    <table class="table table-compact w-full text-base border-2 border-base-300">
       <thead>
         <tr class="text-left">
+          <th></th>
           <th>Year Level</th>
           <th>Term</th>
           <th>Code</th>
@@ -22,15 +23,16 @@
       </thead>
       <tbody>
         <tr *ngFor="let subject of subjects$ | async">
-          <td class="text-xl">{{ subject.year_level }}</td>
-          <td class="text-xl">{{ subject.term }}</td>
-          <td class="text-xl">{{ subject.code }}</td>
-          <td class="text-xl">{{ subject.title }}</td>
-          <td class="text-xl">{{ subject.description }}</td>
-          <td class="text-xl">{{ subject.units }}</td>
-          <td class="text-xl">{{ subject.hours }}</td>
-          <td class="text-xl">{{ subject.prerequisite?.code ?? '' }}</td>
-          <td class="text-xl">{{ subject.corequisite?.code ?? '' }}</td>
+          <td></td>
+          <td class="text-base">{{ subject.year_level }}</td>
+          <td class="text-base">{{ subject.term }}</td>
+          <td class="text-base">{{ subject.code }}</td>
+          <td class="text-base">{{ subject.title }}</td>
+          <td class="text-base">{{ subject.description }}</td>
+          <td class="text-base">{{ subject.units }}</td>
+          <td class="text-base">{{ subject.hours }}</td>
+          <td class="text-base">{{ subject.prerequisite?.code ?? '' }}</td>
+          <td class="text-base">{{ subject.corequisite?.code ?? '' }}</td>
           <td class="space-x-4 justify-center items-center text-center">
             <button
               class="btn btn-secondary bg-secondary text-secondary-content"
